Fixed background issue
Background covers the whole page in index and reserve pages

--- a/Style/style.css
+++ b/Style/style.css
@@ -95,7 +95,7 @@ header {
     grid-template-columns: 20vw 60vw 20vw; /*FreeSpace Content FreeSpace*/
     grid-template-rows: 11vh 14% 13% 2% 25% 9% 9% 17%;/*Header FreeSpace Title FreeSpace Description FreeSpace Button FreeSpace*/
     background: url('../img/index_backgroundd.png');
-    background-size: 100% auto;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -153,7 +153,7 @@ header {
     grid-template-rows: 11vh 89vh; /*Header GreyBox*/
     height: 100vh;
     background: url(../img/background_house.png);
-    background-size: 110% auto;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -274,3 +274,4 @@ header {
     border: 1px solid #707070;
     opacity: 1;
 }
+/*------------------------------------*/
